--- a/src/FXMLDocument.fxml
+++ b/src/FXMLDocument.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="531.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="FXMLDocumentController">
     <children>
       <TextField fx:id="txtEmployeeID" layoutX="153.0" layoutY="69.0" prefWidth="200.0" />
       <TextField fx:id="txtFirstName" layoutX="153.0" layoutY="104.0" prefWidth="200.0" />
@@ -16,7 +16,8 @@
       <TextField fx:id="txtDay" layoutX="193.0" layoutY="170.0" prefHeight="25.0" prefWidth="30.0" />
       <TextField fx:id="txtYear" layoutX="233.0" layoutY="170.0" prefHeight="25.0" prefWidth="50.0" />
         <Label fx:id="label" layoutX="152.0" layoutY="119.0" minHeight="16" minWidth="69" />
-      <Label layoutX="81.0" layoutY="73.0" text="Employee ID" />
+      <Label fx:id="lblEmployeeID" layoutX="81.0" layoutY="73.0" text="Employee ID" />
+      <Button fx:id="btnAddEmployee" layoutX="153.0" layoutY="204.0" mnemonicParsing="false" onAction="#addEmployeeBtnClicked" prefHeight="25.0" prefWidth="200.0" text="Add Employee" />
       <Button fx:id="btnImport" layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#importBtnClicked" prefHeight="25.0" prefWidth="112.5" text="Import" />
       <TableView layoutX="28.0" layoutY="236.0" prefHeight="250.0" prefWidth="450.0">
         <columns>
@@ -26,11 +27,10 @@
             <TableColumn fx:id="columnDate" prefWidth="112.5" text="Date of Hire" />
         </columns>
       </TableView>
-      <Button fx:id="btnAddEmployee" layoutX="153.0" layoutY="204.0" mnemonicParsing="false" onAction="#addEmployeeBtnClicked" prefHeight="25.0" prefWidth="200.0" text="Add Employee" />
-      <Label layoutX="81.0" layoutY="108.0" text="First Name" />
-      <Label layoutX="81.0" layoutY="141.0" text="Last Name" />
-      <Label layoutX="81.0" layoutY="174.0" text="Date" />
-      <Label layoutX="309.0" layoutY="174.0" text="MM / DD / YYYY" />
+      <Label fx:id="lblFirstName" layoutX="81.0" layoutY="108.0" text="First Name" />
+      <Label fx:id="lblLastName" layoutX="81.0" layoutY="141.0" text="Last Name" />
+      <Label fx:id="lblDate" layoutX="81.0" layoutY="174.0" text="Date" />
+      <Label fx:id="lblDateFormat" layoutX="309.0" layoutY="174.0" text="MM / DD / YYYY" />
       <Label layoutX="225.0" layoutY="170.0" text="/">
          <font>
             <Font size="17.0" />
@@ -41,5 +41,6 @@
             <Font size="17.0" />
          </font>
       </Label>
+      <Label fx:id="lblError" alignment="TOP_LEFT" layoutX="28.0" layoutY="489.0" prefHeight="40.0" prefWidth="450.0" />
     </children>
 </AnchorPane>
